consumer to process data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+#server confguration
+server.port=8082
+server.servlet.contextPath=/redis-stream-kickstart
 
+#redis host and port
+redis-host=192.168.99.102
+redis-port=6379
+
+#name of the odd/even list
+odd-list-key=odd-list
+even-list-key=even-list
+
+#name of the stream
+odd-even-stream=odd-even-events
+stream-poll-timeout=500
+
+#name of the consumer group
+consumer-group-name=odd-even-group
+
+#cache key to store total number processed, last number processed
+record-cache-key=recordKey
