added scheduler to process pending message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ redis-port=6379
 #name of the odd/even list
 odd-list-key=odd-list
 even-list-key=even-list
+failure-list-key=failure-list
 
 #name of the stream
 odd-even-stream=odd-even-events
