--- a/redis-stream-consumer/build.gradle
+++ b/redis-stream-consumer/build.gradle
@@ -3,3 +3,7 @@ if(!project.hasProperty("port"))
 bootRun {
     args += ["--server.port=${project.port}"]
 }
+
+dependencies {
+    implementation project(':redis-stream-common')
+}
